# IntelliBase

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: config.py  logger_setup.py  main.py
app/core/: config.py  exceptions.py  forbidden_phrases.py  pii_patterns.py  suspicious_out_patterns.py
app/llm/: client.py
app/observability/: logger.py  pii.py  tracing.py
app/prompts/: loader.py  system_v1.md
app/prompts/tools/: search_documents.md
app/routers/: chat.py  health.py  models.py
app/schemas/: chat.py  models.py  validation.py
app/scripts/: benchmark.md  benchmark.py
app/services/: llm.py  llm_client.py
app/services/security/: input_validator.py  output_filter.py
app/tools/: handlers.py  schemas.py
data/: knowledge_base.db
docs/: architecture.md
docs/litellm/: config.yaml
docs/security/: garak_after_2026-06-22.md  garak_baseline_2026-06-22.md
eval/: check_thresholds.py  golden_dataset.json  run_evaluation.py  thresholds.yaml
eval/runs/: 2026-06-20.json
eval/security/: garak_config.yml  rest_config.json
examples/: run_benchmark_3_3.py  run_tool_call.py
logs/: app.log.example  app.log.example_3_3
tests/unit/: test_llm_service.py  test_pii.py  test_schemas.py
