[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelli_base"
version = "0.1.0"
description = "Корпоративная база знаний с использованием ИИ"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "openai>=2.38.0",
    "pydantic_settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0"
]

[project.urls]
Source = "https://github.com/vavstone/IntelliBase"