[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelli_base"
version = "0.1.0"
description = "Корпоративная база знаний с использованием ИИ"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "uvicorn[standard]>=0.29",
    "openai>=1.40",
    "redis>=5.0",
    "tenacity>=8.2",
]

[project.urls]
Source = "https://github.com/vavstone/IntelliBase"

[tool.setuptools]
packages = ["app"]